增加内容 Content （用于商品详情）
